# TRG

./: .gitignore  CLAUDE.md  Combiner.py  NewContract.py  README.md  SKILLS.md  TRG_ABCD_3.md  TRG_ABCD_4.md  TRG_Ising.py  TRG_Ising_Recycle.py  WM.py  ascii2pdf.py  common.py  extension.py  myTRG.py  pyproject.toml  trg.py  util_sympy.py
docs/: TRG_ABCD_1.md  TRG_ABCD_2.md  UnicodeDrawing.md
