[project]
name = "trg"
version = "0.1.0"
description = "Tensor Renormalization Group (TRG) for the 2D classical Ising and clock models, built on cytnx."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cytnx>=1.1.0",
    "numpy>=2.0",
    "scipy>=1.11",
    "sympy>=1.12",
    "reportlab>=4.0",
]

[tool.uv]
package = false
